--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.passwordgenerator" >
+    package="com.example.passwordgenerator">
 
     <application
         android:allowBackup="true"
@@ -8,14 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/log"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PasswordGenerator" >
-        <activity android:name=".HelpActivity"
+        android:theme="@style/Theme.PasswordGenerator">
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/settings"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".HelpActivity"
             android:label="@string/help"
             android:parentActivityName=".MainActivity">
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
