--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/log"
+        android:icon="@mipmap/icon_512_square"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/log"
+        android:roundIcon="@mipmap/icon_512_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PasswordGenerator">
         <activity
